--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,8 +25,14 @@ jobs:
       - run: &ansible_test
           name: Ansible Test
           command: |
+            export TAG=$(echo $CIRCLE_BRANCH | grep -o "tags=.*$" | sed -e s/^tags=//)
             cd ansible
-            ansible-playbook playbooks/mastodon-setup.yml
+            echo $TAG
+            if [ -n "$TAG" ]; then
+              ansible-playbook playbooks/mastodon-setup.yml --tags=$TAG
+            else
+              ansible-playbook playbooks/mastodon-setup.yml
+            fi
   ubuntu:
     docker:
       - image: ubuntu:16.04
