Add task of using swap

--- a/ansible/playbooks/roles/common/handlers/main.yml
+++ b/ansible/playbooks/roles/common/handlers/main.yml
@@ -1,2 +1,11 @@
 ---
-# handlers file for common
+
+- name: swapoff
+  shell: swapoff /swapfile
+  listen: "disable swap"
+
+- name: remove swapfile
+  file:
+    path: /swapfile
+    state: absent
+  listen: "disable swap"
