--- a/ansible/playbooks/roles/ruby/tasks/main.yml
+++ b/ansible/playbooks/roles/ruby/tasks/main.yml
@@ -14,7 +14,7 @@
     repo: https://github.com/rbenv/rbenv.git
     dest: "{{ ruby_rbenv_path }}"
   environment:
-    PATH: "/opt/git/git-{{ git_version }}/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ git_install_path }}/bin:{{ ansible_env.PATH }}"
   become: yes
   become_user: "{{ user_name }}"
   tags: ruby
@@ -52,7 +52,7 @@
     dest: "{{ ruby_rbenv_path }}/plugins/ruby-build"
     version: v20180329
   environment:
-    PATH: "/opt/git/git-{{ git_version }}/bin:{{ ansible_env.PATH }}"
+    PATH: "{{ git_install_path }}/bin:{{ ansible_env.PATH }}"
   become: yes
   become_user: "{{ user_name }}"
   tags: ruby
