--- a/ansible/playbooks/roles/ruby/tasks/main.yml
+++ b/ansible/playbooks/roles/ruby/tasks/main.yml
@@ -74,11 +74,11 @@
 - name: "Check that ruby v{{ ruby_version }} is installed"
   stat:
     path: "{{ ruby_rbenv_path }}/versions/{{ ruby_version }}"
-  register: ruby_installed_dir
+  register: ruby_installed_path
   tags: ruby
 
 - name: Install ruby via rbenv
-  when: not ruby_installed_dir.stat.exists
+  when: not ruby_installed_path.stat.exists
   shell: "rbenv install {{ ruby_version }} && rbenv global {{ ruby_version }}"
   become: yes
   become_user: "{{ user_name }}"
