(#12) Add nginx role

--- a/ansible/playbooks/roles/mastodon/meta/main.yml
+++ b/ansible/playbooks/roles/mastodon/meta/main.yml
@@ -1,6 +1,7 @@
 dependencies:
   - { role: user }
   - { role: git }
+  - { role: nginx }
   - { role: nodejs }
   - { role: yarn }
   - { role: ruby }
