(#34) Move task from postgresql to mastodon

--- a/ansible/playbooks/roles/mastodon/tasks/main.yml
+++ b/ansible/playbooks/roles/mastodon/tasks/main.yml
@@ -34,3 +34,14 @@
 #   notify:
 #     - "Reload nginx"
 #   tags: nginx
+
+- name: Add DB user
+  when: ansible_virtualization_type != "docker"
+  postgresql_user:
+    name: "{{ postgresql_user }}"
+    password: "{{ postgresql_user_password | password_hash('sha512') }}"
+    encrypted: yes
+    role_attr_flags: CREATEDB
+  become: yes
+  become_user: postgres
+  tags: postgresql
