--- a/ansible/playbooks/roles/git/tasks/main.yml
+++ b/ansible/playbooks/roles/git/tasks/main.yml
@@ -13,6 +13,7 @@
   get_url:
     url: "https://github.com/git/git/archive/v{{ git_version }}.tar.gz"
     dest: "/var/tmp/git-{{ git_version }}.tar.gz"
+  tags: git
 
 - name: Unarchive
   unarchive:
