--- a/ansible/playbooks/roles/git/tasks/main.yml
+++ b/ansible/playbooks/roles/git/tasks/main.yml
@@ -24,31 +24,43 @@
     remote_src: yes
   tags: git
 
+- name: which git
+  shell: which git
+  environment:
+    PATH: "{{ git_install_path }}/bin:{{ ansible_env.PATH }}"
+  failed_when: git_exists.rc not in [0, 1]
+  register: git_exists
+  tags: git
+
 - name: make configure
+  when: git_version not in git_exists.stdout
   shell: make configure
   args:
     chdir: "{{ git_install_path }}"
   tags: git
 
 - name: "./configure --prefix={{ git_install_path }}"
+  when: git_version not in git_exists.stdout
   shell: "./configure --prefix={{ git_install_path }}"
   args:
     chdir: "{{ git_install_path }}"
   tags: git
 
 - name: make all
+  when: git_version not in git_exists.stdout
   shell: make all
   args:
     chdir: "{{ git_install_path }}"
   tags: git
 
 - name: make install
+  when: git_version not in git_exists.stdout
   shell: make install
   args:
     chdir: "{{ git_install_path }}"
   tags: git
 
-- name: Set path
+- name: Set env
   template:
     src: git.sh.j2
     dest: /etc/profile.d/git.sh
