--- a/ansible/playbooks/roles/mastodon/handlers/main.yml
+++ b/ansible/playbooks/roles/mastodon/handlers/main.yml
@@ -1,9 +1,11 @@
 ---
 
-- name: Use webroot
-  when: not is_test
-  shell: "./certbot-auto certonly --webroot --domain {{ domain_name }} --webroot-path /home/mastodon/live/public/"
-  args:
-    chdir: "{{ letsencrypt_certbot_path }}"
-    creates: "/etc/letsencrypt/live/{{ domain_name }}"
+- name: Daemon reload
+  systemd:
+    daemon_reload: yes
   tags: mastodon
+
+- name: Restart cron
+  systemd:
+    name: cron
+    state: restarted
