Skip mastodon handler when ansible_virtualization_type is docker

--- a/ansible/playbooks/roles/mastodon/handlers/main.yml
+++ b/ansible/playbooks/roles/mastodon/handlers/main.yml
@@ -1,11 +1,13 @@
 ---
 
 - name: Daemon reload
+  when: ansible_virtualization_type != "docker"
   systemd:
     daemon_reload: yes
   tags: mastodon
 
 - name: Restart cron
+  when: ansible_virtualization_type != "docker"
   systemd:
     name: cron
     state: restarted
