--- a/ansible/playbooks/group_vars/all/vars.yml
+++ b/ansible/playbooks/group_vars/all/vars.yml
@@ -1,2 +1,5 @@
 lower_os_family: "{{ ansible_os_family | lower }}"
 lower_distribution: "{{ ansible_distribution | lower }}"
+
+is_test: false
+common_enable_swap: false
