(#53) Reload nginx before obtain SSL certificate

--- a/ansible/playbooks/roles/mastodon/tasks/main.yml
+++ b/ansible/playbooks/roles/mastodon/tasks/main.yml
@@ -88,8 +88,13 @@
     src: mastodon.conf.j2
     dest: /etc/nginx/conf.d/mastodon.conf
     validate: bash -c 'nginx -t -c /dev/stdin <<< "events {worker_connections 1;} http { include %s; }"'
-  notify:
-    - "Reload nginx"
+  tags: mastodon
+
+- name: Reload nginx
+  when: ansible_virtualization_type != "docker"
+  systemd:
+    name: nginx
+    state: reloaded
   tags: mastodon
 
 - name: Obtain SSL certificate
