--- a/ansible/playbooks/roles/mastodon/tasks/main.yml
+++ b/ansible/playbooks/roles/mastodon/tasks/main.yml
@@ -99,7 +99,7 @@
 
 - name: Obtain SSL certificate
   when: not is_test
-  shell: "./certbot-auto certonly --agree-tos --webroot --domain {{ domain_name }} --email {{ email }} --webroot-path /home/{{ user_name }}/live/public/"
+  shell: "./certbot-auto certonly --non-interactive --agree-tos --webroot --domain {{ domain_name }} --email {{ email }} --webroot-path /home/{{ user_name }}/live/public/"
   args:
     chdir: "{{ letsencrypt_certbot_path }}"
     creates: "/etc/letsencrypt/live/{{ domain_name }}"
