Fix: nginx can read mastodon's home directory

--- a/ansible/playbooks/roles/user/tasks/main.yml
+++ b/ansible/playbooks/roles/user/tasks/main.yml
@@ -5,3 +5,10 @@
     name: "{{ user_name }}"
     shell: /bin/bash
   tags: user
+
+- name: Change mode to 0755
+  file:
+    path: "/home/{{ user_name }}"
+    state: directory
+    mode: 0755
+  tags: user
